# SlotMachine-QML-Cpp

./: Blue_blackborder.qml  CMakeLists.txt  Documentation.docx  InfoPage.qml  ModalWindow.qml  main.cpp  main.qml  slot numbers.xlsx  slot_machine.cpp  slot_machine.h
images/: spin2.m4a  spin3.m4a
